--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,6 @@ p{
     color:rgb(52, 63, 100);
     margin-left: 10px;
 }
-.active{
-    color: royalblue;
-}
 .selected{
     color:rgb(255, 49, 70);
 }
@@ -82,6 +79,9 @@ p{
 i{
     color: rgb(185, 185, 185);
     font-size: 13px; 
+}
+.nav-ele:hover h6,.nav-ele:hover i{
+  color:royalblue;
 }
 #saved-music{
     width:75%;
@@ -100,6 +100,9 @@ i{
     margin:10px 0;
     width:100%;
     cursor: pointer;
+}
+.saved-music-ele:hover h6,.saved-music-ele:hover i{
+  color:royalblue;
 }
 #saved-music-wrapper{
     margin:10px 0;
@@ -201,6 +204,9 @@ i{
   .trendingsong{
       cursor: pointer;
   }
+.trendingsong:hover{
+  transform: scale(1.1);
+}
   .trendingsong img{
       height:150px;
       border-radius: 10px;
@@ -388,4 +394,8 @@ border-radius: 10px;
     font-size:18px;
     cursor: pointer;
     color:rgb(164, 173, 200);
+}
+#controls i:hover{
+  color:royalblue;
+  transform: scale(1.2);
 }
